--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.6",
     "cors": "^2.8.5",
     "moment": "^2.24.0",
     "react": "^16.8.6",
